--- a/styles/body.css
+++ b/styles/body.css
@@ -2,111 +2,135 @@
     color:white;
     border:2px solid #494949;
     border-radius:12px;
-    margin-left:12%;
-    margin-right:12%;
-    margin-bottom:150px;
     position: relative;
-    top:110px;
-    padding:12px;
-    text-align: center;
+    padding:35px;
+    top:95px;
     background-image: url(../images/background-1.avif);
-    background-size: cover;
     background-repeat: no-repeat;
+    background-size: cover;
     z-index: 1;
     font-size:22px;
+    font-family:Poppins, Arial;
+    margin-right:10%;
 
     
 }
 
 .body-head{
-    font-size:32px;
     font-weight:bold;
-    text-align:center;
-    color:#494949;
-    line-height:1px;
-    color:white;
-
-    
-}
-
-
-.subheading{
-    text-align: center;
     text-decoration: underline;
-    
+    font-size:40px;
+    position:relative;
+    top:90px;
+    text-align: center;
+    margin:0;
 }
 
-.cv{
+.skills{
+    position:relative;
+    top:110px;
+    text-align:center;
+    right:50px;
+}
+
+.main-body{
+    display:flex;
+    flex-direction: row;
+}
+
+
+.w{
+    border:2px solid black;
+    margin-bottom:4px;
+    margin-right: 100px;
+    height:140px;
+    width:160px;
     display:flex;
     justify-content: center;
-    border:2px solid black;
-    text-decoration: none;
-    color:rgb(31, 29, 29);
-    background-color:#3b82f6;
-    max-width: 150px;
-    margin:0 auto;
-    border-radius:70px;
-    transition: background-color 0.3s,
-    color 0.3s;
-    padding:14px;
-
-    
-}
-
-.cv:hover{
-    background-color: #225bd7;
-    color:white;
-}
-
-
-.more{
-    display:grid;
-    grid-template-columns:  1fr 1fr 1fr 1fr;
-    gap:20px;
-    margin-bottom:200px;
-    color:white;
-    font-size:16px;
-    height:10px;
-}
-
-
-.more p {
-    font-weight:bold;
-    text-decoration: underline;
-}
-
-.more div{
-    background-color:rgb(11, 96, 124);
-    border:3px solid gray;
-    padding:12px;
-    border-radius:12px;
-    transition: padding 0.5s;
-}
-
-.more-btn{
+    align-items:center;
+    border-radius:50%;
+    background-color: white;
     color:black;
-    text-decoration:none;
-    display: flex;
+    transition: font-weight 0.4s,
+    height 0.4s, width 0.4s;
+
+}
+
+.p{
+    border:2px solid black;
+    margin-bottom:4px;
+    height:140px;
+    width:160px;
+    border-radius:50%;
+    display:flex;
     justify-content: center;
     align-items:center;
+    margin-left:100px;
+    background-color: white;
+    color:black;
+        transition: font-weight 0.4s,
+    height 0.4s, width 0.4s;
+}
+
+.m{
+        border:2px solid black;
+    margin-bottom:4px;
+    height:140px;
+    width:160px;
+    border-radius:50%;
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    background-color: white;
+    color:black;
+        transition: font-weight 0.4s,
+    height 0.4s, width 0.4s;
+
+
+}
+
+.text{
+    font-size:26px;
+    line-height: 45px;
+}
+
+
+.w:hover, .p:hover, .m:hover{
+    font-weight: bold;
+    height:200px;
+    width:200px;
+
+}
+
+.subheading{
+    text-decoration: underline;
+    font-size:28px;
+}
+
+.links{
+    margin-top:120px;
+    margin-left:30px;
+}
+
+.cv, .linkedin, .github{
+    border:1px solid black;
+    text-decoration: none;
+    color:white;
+    padding:12px;
+    background-color: rgb(53, 111, 162);
     border-radius:6px;
-    background-color:rgb(23, 133, 202);
-    padding:6px;
-    transition:background-color 0.5s,
-    padding 0.5s;
-    text-align:center;
-
-
 }
 
-.more-btn:hover{
-    background-color: rgb(92, 37, 201);
-    padding:24px;
+.linkedin{
+    background-color: #a3c0d7;
+    margin-left:10px;
 }
 
-
-.more div a{
-    justify-content: center;
-    align-items:center;
+.github{
+    background-color: #231dc7;
+    margin-left:10px;
 }
 
+.cv:hover, .linkedin:hover, .github:hover{
+    opacity:0.55;
+}
